--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                             <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".disain" class="light-gray-text-link text-very-small">Disain</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".trükis" class="light-gray-text-link text-very-small">Trükis</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Hindamine</a></li>
                         </ul>                                                                           
                         <!-- end filter navigation -->
                     </div>
@@ -289,6 +290,56 @@
                                     </figure>
                                 </a>
                             </li>
+                            <!-- start  portfolio item -->
+                            <li class="grid-item wow animate__fadeInUp hindamine disain" data-wow-delay="0.4s">
+                                <a href="kak_100.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642663611/Koduleht/ametikool_100_zmur5e.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikool 100</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                            <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                                <a href="Ametikooli kalender esikass 2022.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642664302/Koduleht/ametikoolkalender_2022_btbxd0.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikool kalender 2022</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                             <!-- start  portfolio item -->
+                            <li class="grid-item wow animate__fadeInUp hindamine" data-wow-delay="0.4s">
+                                <a href="tervist_edendav_kool.html">
+                                    <figure>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642665550/Koduleht/tervist_ededava_kooli_mockup_klass_fbouhh.jpg" alt=""/></div>
+                                        <figcaption>
+                                            <div class="portfolio-hover-main">
+                                                <div class="portfolio-hover-box align-middle"> 
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Tervist edendav kool</span>
+                                                    <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js Disain</p>
+                                                </div>
+                                            </div> 
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </li>
+                           
                             <!-- end portfolio item --> 
                         </ul>
                     </div>
